Update events - ~Fix CTA horizontal alignment across 3 cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,6 +449,7 @@ img {
 .prices-column>ul {
     padding-left: 1.25rem;
     line-height: 1.563rem;
+    height: 15rem;
 }
 
 
